istio/12.xDS API及动态配置_2/cds-filesystem/envoy.yaml
node:
  id: id_1
  cluster: testcluster

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 127.0.0.1, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: egress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: web_service_1
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: webcluster1 }
          http_filters:
          - name: envoy.router

dynamic_resources:
  cds_config:
    path: "/etc/envoy/cds.conf"
